--- a/CRUDExample/Views/Persons/Index.cshtml
+++ b/CRUDExample/Views/Persons/Index.cshtml
@@ -11,6 +11,8 @@
 
 <h1>Persons</h1>
 
+<a href="~/persons/create">Create Person</a>
+
 <form action="~/persons/index" method="get">
 	<div class="box flex">
 		<div class="flex-1">
@@ -39,6 +41,16 @@
 </form>
 
 <table class="table w-100 mt">
+	<colgroup>
+		<col style="width:15%">  <!-- Person Name -->
+		<col style="width:20%">  <!-- Email -->
+		<col style="width:12%">  <!-- Date Of Birth -->
+		<col style="width:6%">   <!-- Age -->
+		<col style="width:8%">   <!-- Gender -->
+		<col style="width:10%">  <!-- Country -->
+		<col style="width:18%">  <!-- Address -->
+		<col style="width:11%">   <!-- Receive News Letter -->
+	</colgroup>
 	<thead>
 		<tr>
 			<th>
