--- a/CRUDExample/Views/Persons/Delete.cshtml
+++ b/CRUDExample/Views/Persons/Delete.cshtml
@@ -1,16 +1,19 @@
-﻿@model PersonAddRequest
+﻿@model PersonUpdateRequest
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-	ViewBag.Title = "Create Person";
+	ViewBag.Title = "Delete Person";
 }
 
 <a asp-controller="Persons" asp-action="Index" class="link-hover">Back to Persons List</a>
-<h2>Create Person</h2>
+<h2>Delete Person</h2>
 
 <div class="w-50">
-	<form asp-controller="Persons" asp-action="Create" method="post">
+	<form asp-controller="Persons" asp-action="Delete" method="post">
+		@*Hidden*@
+		<input type="hidden" asp-for="PersonId" />
+
 		@*Person Name*@
 		<div class="form-field flex">
 			<div class="w-25">
@@ -108,21 +111,17 @@
 			<div class="w-25">
 			</div>
 			<div class="flex-1">
-				<button class="button button-green-back">Create</button>
+				<button class="button button-red-back">Delete</button>
 				<div asp-validation-summary="All"></div>
-				@if (ViewBag.Errors != null)
-				{
-					<div class="text-red ml">
-						<ul>
-							@foreach (string error in ViewBag.Errors)
-							{
-								<li>@error</li>
-							}
-						</ul>
-					</div>
-				}
 			</div>
 		</div>
 
 	</form>
 </div>
+@section Scripts {
+	<script type="text/javascript">
+		$(document).ready(function () {
+			$("form :input").not(":button, :submit").prop("disabled", true);
+		});
+	</script>
+}
