--- a/CRUDExample/Views/Persons/Index.cshtml
+++ b/CRUDExample/Views/Persons/Index.cshtml
@@ -12,6 +12,9 @@
 <h1>Persons</h1>
 
 <a asp-controller="Persons" asp-action="Create">Create Person</a>
+<a asp-controller="Persons" asp-action="PersonsPDF" target="_blank" class="ml">Download as PDF</a>
+<a asp-controller="Persons" asp-action="PersonsCSV" target="_blank" class="ml">Download as CSV</a>
+<a asp-controller="Persons" asp-action="PersonsExcel" target="_blank" class="ml">Download as Excel</a>
 
 <form asp-controller="Persons" asp-action="Index" method="get">
 	<div class="box flex">
