--- a/CRUDExample/Views/Shared/_Layout.cshtml
+++ b/CRUDExample/Views/Shared/_Layout.cshtml
@@ -17,6 +17,9 @@
                 <li>
                     <a href="~/persons/index">Persons</a>
                 </li>
+                <li>
+                    <a asp-action="Index" asp-controller="Countries">Upload Countries</a>
+                </li>
             </ul>
         </div>
 
